# nls

./: CMakeLists.txt  LICENSE  README.md
examples/: data.csv  sphere_fitting.cpp
include/nls/: eigen_fmt.h  levenberg_marquardt.h
sphere_fitting/: CMakeLists.txt
sphere_fitting/src/: datagen.py  sphere_fitting.cpp
src/: ceres_test.cpp  cholesky.cpp  levenberg_marquardt.cpp  levenberg_marquardt.h  main.cpp  nls_test.cpp  robust_nls.cpp  sphere_fitting.cpp
test/: nls_test.cpp
